--- a/src/main/resources/templates/countries-list.html
+++ b/src/main/resources/templates/countries-list.html
@@ -18,7 +18,7 @@
                     <path d="M4.406 3.342A5.53 5.53 0 0 1 8 2c2.69 0 4.923 2 5.166 4.579C14.758 6.804 16 8.137 16 9.773 16 11.569 14.502 13 12.687 13H3.781C1.708 13 0 11.366 0 9.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383"/>
                 </svg>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+            <button class="navbar-toggler select-btn" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="offcanvas offcanvas-end text-bg-secondary" tabindex="-1" id="offcanvasNavbar2" aria-labelledby="offcanvasNavbar2Label">
@@ -29,10 +29,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mission Statement</a>
+                            <a class="nav-link" href="/mission">Mission Statement</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,7 +50,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/level3SubtaskA">SingleRegion</a></li>
                                 <li><a class="dropdown-item" href="/level3SubtaskA/multiple">MultipleRegion</a></li>
-                                <li><a class="dropdown-item" href="/level3SubtaskB">SubtaskB</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskB?region=Country">SubtaskB</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -90,21 +90,23 @@
                         </div>
                         <form th:action="@{/subtaskA/countries}" th:method="get">
                         <!--Script content-->
-                        <form th:action="@{/subtaskA/countries}" th:method="get"  >
+
 
                         <div class="box-scroll">
 
+                            <div class="input-group">
+                                <div class="country-list">
+                                    <ul class="options">
+                                        <!-- Add unique IDs to each checkbox -->
+                                        <li th:each="country, i : ${countries}">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" name="selectedCountry" th:value="${country.name}" th:id="'flexCheckDefault_' + ${i.index}">
+                                                <label class="form-check-label" th:for="'flexCheckDefault_' + ${i.index}" th:text="${country.name}"></label>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
 
-                            <div class="country-list">
-                                <ul class="options" th:id="'countryList_' + ${uniqueId}" th:each="country:${countries}">
-                                    <li>
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" name="selectedCountry" th:value="${country.name}" th:id="'flexCheckDefault_' + ${uniqueId}">
-                                            <label class="form-check-label" th:for="'flexCheckDefault_' + ${uniqueId}" th:text="${country.name}"></label>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
 
 
 
@@ -119,6 +121,7 @@
                                     </option>
                                 </select>
                             </div>
+
                             <div class="input">
                                 <label for="">Start Year</label>
                                 <input type="number" name="startYears" id="startYears" th:value="${modelView.startYears}">
@@ -132,7 +135,8 @@
                             <div class="modal-footer">
                                 <button type="submit" class="btn btn-primary">Save changes</button>
                             </div>
-                        </form>
+                        </div>
+
                         </form>
                     </div>
                 </div>
@@ -140,7 +144,6 @@
 
 
         </div>
-
         <div class="three">
             <form th:action="@{/subtaskA/countries}" th:method="get">
                 <button type="submit" class="btn btn-primary" >Reset</button></form>
@@ -149,6 +152,9 @@
 
 
         </div>
+    </div>
+
+
 </div>
 
 <div class="second-container">
@@ -234,17 +240,35 @@
 
 
 <!--footer-->
-<script th:src="@{/script.js}"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script><script th:src="@{/script.js}">
-    function resetFilter (path) {
-        var url = '/subtaskA/countries' + path
-        window.location.href = url;
-    }
-
-
-
+<script th:src="@{/script.js}">
 
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const checkboxes = document.querySelectorAll('.form-check-input');
+
+        checkboxes.forEach(checkbox => {
+            checkbox.addEventListener('click', function() {
+                if (this.checked) {
+                    // Disable all other checkboxes
+                    checkboxes.forEach(cb => {
+                        if (cb !== this) {
+                            cb.disabled = true;
+                        }
+                    });
+                } else {
+                    // Enable all checkboxes
+                    checkboxes.forEach(cb => {
+                        cb.disabled = false;
+                    });
+                }
+            });
+        });
+    });
+
+</script>
+
 
 </body>
 
