--- a/src/main/resources/templates/landingpage.html
+++ b/src/main/resources/templates/landingpage.html
@@ -50,7 +50,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/level3SubtaskA">SingleRegion</a></li>
                                 <li><a class="dropdown-item" href="/level3SubtaskA/multiple">MultipleRegion</a></li>
-                                <li><a class="dropdown-item" href="/level3SubtaskB">SubtaskB</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskB?region=Country">SubtaskB</a></li>
                             </ul>
                         </li>
                     </ul>
