--- a/src/main/resources/templates/level3SubtaskAmultiple.html
+++ b/src/main/resources/templates/level3SubtaskAmultiple.html
@@ -7,6 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>My Capstone</title>
     <link th:href="@{/style.css}"  rel="stylesheet">
+    <style>
+        .input{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <!-- headers-->
@@ -30,10 +35,10 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mission Statement</a>
+                            <a class="nav-link" href="/mission">Mission Statement</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -51,7 +56,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="/level3SubtaskA">SingleRegion</a></li>
                                 <li><a class="dropdown-item" href="/level3SubtaskA/multiple">MultipleRegion</a></li>
-                                <li><a class="dropdown-item" href="/level3SubtaskB">SubtaskB</a></li>
+                                <li><a class="dropdown-item" href="/level3SubtaskB?region=Country">SubtaskB</a></li>
                             </ul>
                         </li>
                     </ul>
