--- a/src/main/resources/templates/level3SubtaskA.html
+++ b/src/main/resources/templates/level3SubtaskA.html
@@ -7,6 +7,59 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>My Capstone</title>
     <link th:href="@{/style.css}"  rel="stylesheet">
+    <style>
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            z-index: 1;
+            background-color: #fff;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            padding: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+            width: 90%;
+        }
+
+        .dropdown-menu.show {
+            display: block;
+        }
+
+        .dropdown-menu li {
+            list-style-type: none;
+            margin-bottom: 5px;
+            display: flex; /* Use flexbox */
+            align-items: center;
+            text-align: center/* Align items vertically */
+        }
+
+        .dropdown-menu input[type="checkbox"] {
+            margin-right: 5px;
+        }
+
+        .dropdown-menu label {
+            cursor: pointer;
+            flex-grow: 1; /* Take up remaining space */
+        }
+
+        .dropdown-menu label:hover {
+            color: #007bff;
+        }
+        .nav-link{
+            display: flex;
+        }
+        .dropdown-toggle::after{
+            position: relative;
+            top: 10px;
+        }
+
+
+    </style>
+
 </head>
 <body>
 <!-- headers-->
@@ -60,51 +113,104 @@
 </div>
 <!--middle cotain-->
 
-<div class="mid-container">
-    <div class="title">
-        <h3><span>Deep-level Data</span> > Subtask A </h3>
-    </div>
-    <div class="filter">
-        <div class="one">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
-            </svg>
-            <p>Filter</p>
+<div class=" mid-container">
+<div class="title">
+    <h3><span>High-Level Data</span> > Subtask A </h3>
+</div>
 
+<div class="filter">
+    <div class="one">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+        </svg>
+        <p>Filter</p>
+        <div class="input">
+            <div class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Region
+                </a>
+                <ul class="dropdown-menu" style="width: fit-content !important;">
+                    <li><a class="dropdown-item" href="/level3SubtaskA?region=Country">Country</a></li>
+                    <li><a class="dropdown-item" href="/level3SubtaskA?region=City">City</a></li>
+                    <li><a class="dropdown-item" href="/level3SubtaskA?region=State">State</a></li>
+                </ul>
+            </div>
 
         </div>
-        <div class="two">
+        <div class="three">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Fitures List
             </button>
 
             <!-- Modal -->
 
-            <div class="modal fade list-items" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
+            <div class="feature-list modal fade list-items" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg"> <!-- Increased modal size for better interaction -->
                     <div class="modal-content">
-                        <div class="modal-header ">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">Features List</h1>
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Features List</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <form th:action="@{/level3SubtaskA}" th:method="get">
-
-                            <!--Script content-->
-
+                            <div class="modal-body">
                                 <div class="box-scroll">
-
+                                    <h3 th:text="${selectedRegion.name}"></h3>
                                     <ul class="options">
+                                        <li>
+                                            <div class="input">
+                                                <label for="region">Selected Region</label>
+                                                <select id="region" name="region">
+                                                    <option hidden="hidden" th:each="region : ${modelView.regions}" th:value="${region.name}" th:if="${!region.name.equals('Global')}" th:text="${region.name}" th:selected="${region.selected}" th:href="@{/level3SubtaskA(region=${selectedRegion})}"></option>
+                                                </select>
+                                            </div>
+                                        </li>
 
-                                        <li><div class="input">
-                                            <label for="">Region</label>
-                                            <select id="region" name="region">
-                                                <option th:each="region : ${modelView.regions}" th:value="${region.name}" th:if="${!region.name.equals('Global')}"
-                                                        th:text="${region.name}" th:selected="${region.selected}">
-                                                </option>
-                                            </select>
-                                        </div>
+
+                                        <li >
+                                            <div class="input">
+                                                <div class="nav-item dropdown">
+                                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                        <label>Select a <span th:text="${selectedRegion.name.toLowerCase()}"></span></label>
+                                                    </a>
+                                                    <ul class="dropdown-menu" th:if="${selectedRegion.name.equals('Country')}">
+                                                        <!-- Add unique IDs to each checkbox -->
+                                                        <li th:each="country ,countryIndex : ${countries}">
+
+                                                            <input type="checkbox" th:id="'country_' + ${country.id}" name="selectedString" th:value="${country.name}" th:checked="${selectedList.contains(country.name)}">
+                                                            <label th:for="'country_' + ${country.id}" th:text="${country.name}"></label><br>
+
+                                                        </li>
+
+                                                    </ul>
+                                                    <ul class="dropdown-menu"  th:if="${selectedRegion.name.equals('City')}">
+                                                        <li th:each="city : ${cities}">
+                                                            <input type="checkbox" th:id="'city_' + ${city.id}" name="selectedString" th:value="${city.name}" th:checked="${selectedList.contains(city.name)}">
+                                                            <label th:for="'city_' + ${city.id}" th:text="${city.name}"></label><br>
+                                                        </li>
+                                                    </ul>
+                                                    <ul class="dropdown-menu" th:if="${selectedRegion.name.equals('State')}">
+                                                        <li th:each="state : ${states}">
+                                                            <input type="checkbox" th:id="'state_' + ${state.id}" name="selectedString" th:value="${state.name}" th:checked="${selectedList.contains(state.name)}">
+                                                            <label th:for="'state_' + ${state.id}" th:text="${state.name}"></label><br>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+
+                                            </div>
+
+
+
+
+
+
+
+
+
+
+
 
                                         </li>
+                                        <li></li>
                                         <li>
                                             <div class="input">
                                                 <label for="">Periods Time</label>
@@ -113,8 +219,8 @@
                                         </li>
                                         <li>
                                             <div class="input">
-                                                <label for="">Startting Year</label>
-                                                <input  name="startingYears" id="startingYears" th:value="${#strings.listJoin(modelView.startingYears,',')}">
+                                                <label for="">Starting Year</label>
+                                                <input  name="startingYears" id="startingYears" th:value="${listYear}">
                                             </div>
                                         </li>
                                         <li>
@@ -141,44 +247,48 @@
                                                 <input type="number" name="maxPopulation" id="maxPopulation" th:value="${modelView.maxPopulation}">
                                             </div>
                                         </li>
+
                                     </ul>
-
-
-
-
                                 </div>
-
-
-                                <div class="modal-footer">
-                                    <button type="submit" class="btn btn-primary">Save changes</button>
-                                </div>
-                            </form>
-
+                            </div>
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-primary">Save changes</button>
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
-
-
         </div>
-
-
-
-
-        <form th:action="@{/level3SubtaskA}" th:method="get">
-            <button type="submit" class="btn btn-primary" >Reset</button></form>
-
-
-        </div>
-
-
-
-
-
-
-
 
 
     </div>
+
+
+
+
+    <form action="/level3SubtaskA" method="get">
+        <input type="hidden" name="region" value="Country">
+        <button type="submit" class="btn btn-primary">Reset</button>
+    </form>
+
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+</div>
     <!-- table-->
     <main class="table" id="customers_table">
         <section class="table__header">
